Fix styles to force word-wrap

--- a/resources/content-description.sass
+++ b/resources/content-description.sass
@@ -133,6 +133,7 @@
   #content-left
     flex: 86%
     width: 100%
+    max-width: 86%
 
     .content-description
       width: 100%
